--- a/fancy-weather/.eslintrc.json
+++ b/fancy-weather/.eslintrc.json
@@ -3,8 +3,21 @@
     "browser": true,
     "es6": true
   },
-  "extends": ["airbnb-base", "prettier", "plugin:prettier/recommended"],
+  "extends": [
+    "eslint:recommended",
+    "airbnb-base",
+    "prettier",
+    "eslint-config-prettier"
+  ],
   "plugins": ["prettier"],
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
+  },
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
   "rules": {
     "prettier/prettier": "error",
     "no-unused-vars": "warn"
