--- a/fancy-weather/package.json
+++ b/fancy-weather/package.json
@@ -23,7 +23,7 @@
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "prettier": "2.0.5",
+    "prettier": "^2.0.5",
     "prettier-eslint": "^9.0.1",
     "resolve-url-loader": "^3.1.1",
     "sass": "^1.26.5",
