--- a/fancy-weather/package.json
+++ b/fancy-weather/package.json
@@ -45,6 +45,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.10.1"
+    "@babel/polyfill": "^7.10.1",
+    "ymaps": "^0.2.1"
   }
 }
